--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
@@ -28,3 +28,30 @@
     font-size: 18px;
     color: #7d7d7d;
 }
+.sensitivitySelect{
+    width: fit-content;
+    margin-left: 10px;
+}
+.toggleGraph{
+    color: #0ea4fb;
+    cursor: pointer;
+    &:hover{
+        color: #7d7d7d;
+    }
+    .carret{
+        color: #7d7d7d;
+    }
+}
+.expColDiv{
+    padding-left: 0px;
+    text-align: center;
+    div{
+        color: #0ea4fb;
+        cursor: pointer;
+        border-bottom: 1px solid #cccccc;
+        line-height: 37px;
+        &:hover{
+            color: #7d7d7d;
+        }
+    }
+}
