--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -11,29 +11,43 @@
   <!-- /.page_title d-flex -->
 
   <div class="row no-gutters">
-    <div class="col-sm-7">
+    <div class="col-sm-8">
       <div class="data_listArea">
+        <!-- <app-network-chart></app-network-chart> -->
+        <!-- <app-cd-dashboard></app-cd-dashboard> -->
         <ng-container *ngFor="let application of applicationData; let i=index">
           <div class="data_list" (click)="selectedApplication(i,application)"
-            [ngClass]="{'active':application.name === selectedApplicationName}">
+            [ngClass]="{'active':application.applicationName === selectedApplicationName}">
             <div class="data_list_header d-flex align-items-center">
               <div class="data_list_title">
-                <h3>{{application.name}}</h3>
+                <h3>{{application.applicationName}}</h3>
                 <span class="datetime">{{application.date | date:'medium'}} </span>
               </div>
               <!-- /.data_list_title -->
-              <!-- <div class="data_list_actionsc d-flex align-items-center ml-auto">
-                <div class="dropdown dropdown-icon-remove">
-                  <button class="btn btn-default px-2" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-ellipsis-v"></i>
-                  </button>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                    <a *ngFor="let menu of application.appMenu; let i=index" class="dropdown-item showElementHover"
-                      (click)="getReleases(menu,application.name,i,$event)">{{menu}}</a>
+              <div class="data_list_actionsc d-flex align-items-center ml-auto">
+               <div class="card_indigators mr-3 d-flex" *ngFor="let canaries of application.recentCanaries; let i=index">
+                    <button type="button" class="btn p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="Score: {{canaries.finalScore}}, RunID: {{canaries.canaryId}}">
+                      <a [routerLink]="['/application/deploymentverification/',application.applicationName,canaries.canaryId]" class="ml-2" [ngClass]= "{'ci_check':canaries.finalScore >= canaries.maximumCanaryScore,'ci_close':canaries.finalScore < canaries.minimumCanaryScore,'text-warning':canaries.finalScore < canaries.minimumCanaryScore && canaries.finalScore >= canaries.maximumCanaryScore,'ci_minus': canaries.finalScore === 'N/A' || canaries.finalScore === ''}">
+                      <i class="far" [ngClass]= "{'fa-check-circle':canaries.finalScore >= canaries.maximumCanaryScore,'fa-times-circle':canaries.finalScore < canaries.minimumCanaryScore,'text-warning':canaries.finalScore < canaries.minimumCanaryScore && canaries.finalScore >= canaries.maximumCanaryScore,'fa-minus-circle': canaries.finalScore === 'N/A' || canaries.finalScore === ''}"></i></a>
+                    </button>
+      
                   </div>
-                </div>
-              </div> -->
+                  <!-- <a href="#" class="ci_run ico24 popover-hover" data-container="body" data-toggle="popover" data-placement="top" data-content="65% Complete"><i class="fas fa-circle-notch fa-spin"></i></a> -->
+                  <a href="#" class="ci_tack ml-3" data-toggle="tooltip" data-placement="top" title="Unpin"><i class="fas fa-thumbtack"></i></a>
+
+                        <div class="dropdown dropdown-icon-remove">
+                          <button class="btn btn-default ml-3 px-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-ellipsis-v"></i>
+                          </button>
+                          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                            <!-- <a class="dropdown-item" href="#">Releases</a>
+                            <a class="dropdown-item" href="#">Services</a>
+                            <a class="dropdown-item" href="#">Edit</a>
+                            <div class="dropdown-divider"></div> -->
+                            <a class="dropdown-item" href="#">Delete</a>
+                          </div>
+                        </div>
+              </div>
               <!-- /.data_list_actions -->
             </div>
             <!-- /.data_list_header -->
@@ -41,12 +55,12 @@
               <div class="data_list_values text-center">
                 <ul class="list-unstyled m-0 d-flex flex-wrap justify-content-around">
                   <li class="showElementHover" *ngFor="let applicationInfo of application.appInfo; let i=index"
-                    [ngClass]="{'active':application.name === selectedApplicationName && applicationInfo.applicationInfolabel === showAppDataType && applicationInfo.applicationInfoValue != 'N/A'}"
+                    [ngClass]="{'active':application.applicationName === selectedApplicationName && applicationInfo.applicationInfolabel === showAppDataType && applicationInfo.applicationInfoValue != 'N/A'}"
                     (click)="getAppDataDetails(i,application,applicationInfo.applicationInfolabel,$event)">
                     <div class="dl_value_count">{{applicationInfo.applicationInfoValue}}</div>
                     <div class="dl_value_text">{{applicationInfo.applicationInfolabel}} </div>
                     <span
-                      *ngIf="applicationInfo.applicationInfolabel === showAppDataType && application.name === selectedApplicationName && applicationInfo.applicationInfoValue != 'N/A' "><i
+                      *ngIf="applicationInfo.applicationInfolabel === showAppDataType && application.applicationName === selectedApplicationName && applicationInfo.applicationInfoValue != 'N/A' "><i
                         class="fa fa-angle-up"></i></span>
                   </li>
                 </ul>
@@ -69,10 +83,10 @@
       <!-- /.data_listArea -->
     </div>
     <!-- /.col-sm-8 -->
-    <div class="col-md-5" *ngIf="showReleaseTable">
+    <div class="col-md-4" *ngIf="showReleaseTable">
       <app-release [releaseDataFromParent]="parentReleaseData"></app-release>
     </div>
-    <div class="col-sm-5" *ngIf="!showReleaseTable && applicationData.length != 0">
+    <div class="col-sm-4" *ngIf="!showReleaseTable && applicationData.length != 0">
       <div class="rightBox position-sticky">
         <div class="rightBox_header d-flex align-items-center">
           <h3>{{selectedApplicationName}}</h3>
@@ -88,12 +102,12 @@
                                   <img src="../../../assets/chart_placeholder_01.png" class="img-fluid" alt="chart" />
                                 </div> -->
           <!-- /#particle_chart -->
-
+              
           <!-- /.chart_ratio -->
           <div *ngIf="serviceErrorMessage != ''" class="alert alert-danger" role="alert">
             <p>{{serviceErrorMessage}}</p>
           </div>
-          <div class="table-responsive" *ngIf="serviceData.length>0">
+          <div class="table-responsive" *ngIf="showAppDataType === 'Services'">
             <table class="table table-pet-service mb-0">
               <thead>
                 <tr>
@@ -103,9 +117,9 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let service of serviceData; let i=index">
-                  <td class="{{service.status === 'N/A' ? 'disabledLink': ''}}"><a target="_blank" href="{{service.href}}">{{service.name}}</a></td>
-                  <td>{{service.score}}</td>
+                <tr *ngFor="let service of serviceDemoDataList; let i=index">
+                  <td class="{{service.status === 'N/A' ? 'disabledLink': ''}}"><a target="_blank" href="{{service.href}}">{{service.serviceName}}</a></td>
+                  <td>{{service.finalScore}}</td>
                   <td
                     [ngClass]="{'text-danger':service.status == 'FAIL' || service.status == 'TERMINAL','text-success':service.status == 'PASS'|| service.status == 'SUCCEEDED'}">
                     {{service.status}}</td>
@@ -113,6 +127,31 @@
               </tbody>
             </table>
           </div>
+
+          <div class="table-responsive" *ngIf="showAppDataType === 'Deployment Verification'">
+            <table class="table table-pet-service text-center mb-0">
+            <thead>
+              <tr>
+                <th>Service</th>
+                <th>Score</th>
+                <th>Metric</th>
+                <th>Logs</th>
+                <th>Status</th>
+              </tr>
+            </thead>
+            <tbody >
+              <tr *ngFor="let service of serviceData;let i=index;">
+                <td href="" (click)="getServiceCanaryReport(service.canaryId)" class="showElementHover">
+                 <a [routerLink]="['/application/deploymentverification/',selectedApplicationName,service.canaryId]" >{{service.serviceName}} </a></td>
+                <td>{{service.finalScore}} </td>
+                <td>{{service.metricsScore}} </td>
+                <td>{{service.logsScore}}</td>
+                <td [ngClass]="{'text-danger':service.status == 'FAIL' || service.status == 'TERMINAL','text-success':service.status == 'PASS'|| service.status == 'SUCCEEDED'}">{{service.status}}</td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
+
           <!-- /.table-responsive -->
         </div>
         <!-- /.rightBox_body -->
