--- a/src/styles.less
+++ b/src/styles.less
@@ -784,7 +784,7 @@ li {
 }
 .times b{
 	font-weight: 400;
-	font-size: 24px;
+	font-size: 17px;
 	display: block;
 }
 .score{
@@ -2054,4 +2054,6 @@ td .table-sm input, td .table-sm select, td .table-sm{
     background: #999;  
 	}
 	
-	
+	.clickable {
+		cursor: pointer;
+	}
