--- a/src/app/application/deployment-verification/metric-analysis/child-table/child-table.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/child-table/child-table.component.html
@@ -1,7 +1,7 @@
 <table class="table valign-middle table-bottom-border">
     <thead>
       <tr>
-        <th>{{childData.name}}</th>
+        <th style="width:40px">{{childData.name}}</th>
         <th class="text-center scorebox">SCORE </th>
         <th class="text-center">RANK</th>
         <th class="text-center">CRITICAL</th>
@@ -10,10 +10,12 @@
       </tr>
     </thead>
     <tbody>
-        <tr class="{{selectedType === childData.category && selectedMetricName === metridata.metricName && selectedRow === i ? 'selected-row' : ''}}" 
+        <tr class="{{selectedType === childData.category && selectedMetricName === metridata.metricName && selectedRow === i ? 'selected-row' : ''}} dataRow" 
           *ngFor = "let metridata of childData.metricList | filter:searchData; let i=index" id="{{childData.category}}" 
-          (click)="onSelectRow(i,$event,metridata.metricName)">
-          <td class="cell-heading">{{metridata.metricName}}</td>
+          (click)="onSelectRow(i,childData.category,metridata.metricName)">
+          <td class="cell-heading">
+            <div [innerHTML] = "childMetricName(metridata.metricName)"></div>
+          </td>
           <td class="text-center"><span class="countBox {{assignProperColor(metridata.metricScore)}} scorebox">{{metridata.metricScore}}</span></td>
           <td class="text-center customtd">{{metridata.relevance}}</td>
           <td class="text-center customtd"><i *ngIf="metridata.critical" class="fa fa-check" aria-hidden="true"></i><span *ngIf="!metridata.critical">-</span></td>
