OP-2633: Changes related to style in Infra and Advanced metric section

--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
@@ -89,7 +89,7 @@
                   </tr>
                   <tr class="nested_tr">
                     <ng-container *ngIf="childMetric['Infra'][i]">
-                      <td [attr.colspan]="6">
+                      <td [attr.colspan]="6" class="childRow">
                         <div [@expandableRow]="childView_rowanimation">
                           <app-child-table 
                             [childData]="infraMetric" 
@@ -139,7 +139,7 @@
                   </tr>
                   <tr class="nested_tr">
                     <ng-container *ngIf="childMetric['Advanced'][i]">
-                      <td [attr.colspan]="6">
+                      <td [attr.colspan]="6" class="childRow">
                         <div [@expandableRow]="childView_rowanimation">
                           <app-child-table 
                             [childData]="advancedMetric" 
@@ -256,7 +256,7 @@
                   </tr>
                   <tr class="nested_tr">
                     <ng-container *ngIf="childMetric['Infra'][i]">
-                      <td [attr.colspan]="6">
+                      <td [attr.colspan]="6" class="childRow">
                         <div [@expandableRow]="childView_rowanimation">
                           <app-child-table 
                             [childData]="infraMetric" 
@@ -306,7 +306,7 @@
                   </tr>
                   <tr class="nested_tr">
                     <ng-container *ngIf="childMetric['Advanced'][i]">
-                      <td [attr.colspan]="6">
+                      <td [attr.colspan]="6" class="childRow">
                         <div [@expandableRow]="childView_rowanimation">
                           <app-child-table 
                             [childData]="advancedMetric" 
