OP-2891: Removed unwanted code

--- a/src/app/application/deployment-verification/metric-analysis/child-table/child-table.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/child-table/child-table.component.html
@@ -1,7 +1,7 @@
 <table class="table valign-middle table-bottom-border">
     <thead>
       <tr>
-        <th style="width:40px">{{childData.name}}</th>
+        <th>{{childData.name}}</th>
         <th class="text-center scorebox">SCORE </th>
         <th class="text-center">RANK</th>
         <th class="text-center">CRITICAL</th>
