--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -171,7 +171,7 @@
             </div>
             <div data-toggle="tooltip" data-placement="top" title="Time Analysis"><i class="fa fa-bar-chart icon-bar-chart text-primary clickable" aria-hidden="true"></i></div>
             <button class="btn p-0" data-toggle="tooltip" data-placement="top" title="Download Cluster Info"><img src="../../../assets/images/download.png" alt="download" /></button>
-            <button class="btn btn-link pr-0" type="button" data-toggle="collapse" [attr.data-target]="switchToState === 'Expand All'?'#log' + log.id:'#log'" #expColBtn
+            <button class="btn btn-link pr-0" type="button" data-toggle="collapse" id="expColBtn" [attr.data-target]="switchToState === 'Expand All'?'#log' + log.id:'#log'" #expColBtn
               aria-expanded="true" aria-controls="collapse">
               <i class="fa fa-sort-down"></i>
             </button>
