--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -98,16 +98,17 @@
         </div>
         <!-- /.rightBox_header -->
         <div class="rightBox_body">
-       
-          <!-- <div id="particle_chart">
-                                  <img src="../../../assets/chart_placeholder_01.png" class="img-fluid" alt="chart" />
-                                </div> -->
+          <div id="particle_chart" *ngIf="nodes.length>0">
+                   <app-network-chart [nodes]="nodes" [clusters]="clusters" [links]="links"></app-network-chart>
+
+                  </div>
           <!-- /#particle_chart -->
               
           <!-- /.chart_ratio -->
           <div *ngIf="serviceErrorMessage != ''" class="alert alert-danger" role="alert">
             <p>{{serviceErrorMessage}}</p>
           </div>
+         
           <div class="table-responsive" *ngIf="showAppDataType === 'Services' && serviceData.length>0">
             <table class="table table-pet-service mb-0">
               <thead>
