OP-3071: Created seperate application component and put related component in it. i.e, Application creation ,edit and application listing.

--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -204,7 +204,7 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 		border-left: none;
 	}
 	.customAcc{
-		background: #fff url(../../../assets/images/collen.png) no-repeat center right;
+		background: #fff url(../../../../assets/images/collen.png) no-repeat center right;
 		border-radius: 5px 0px 0px 5px;
 		border-right: none;
 	}
