--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -28,7 +28,7 @@
                 <span>Email :</span>
                 <strong>{{createApplicationForm.value.emailId}}</strong>
               </li>
-              <li class="ti-item">
+              <li class="ti-item" *ngIf = "userType === 'Autopilot Only' ? false : true ">
                 <i class="{{createApplicationForm.getRawValue().imageSource !== ''?'fas fa-check-circle':'far fa-dot-circle'}}"></i>
                 <span>Image Source :</span>
                 <strong>{{createApplicationForm.getRawValue().imageSource}}</strong>
@@ -52,6 +52,16 @@
                 <i class="{{serviceArr.serviceName !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
                 <span>Service name</span>
                 <strong>{{serviceArr.serviceName}}</strong>
+              </li>
+              <li class="ti-item" *ngIf = "userType.includes('Autopilot')">
+                <i class="{{serviceArr.logTemp !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
+                <span>Log Template</span>
+                <strong>{{serviceArr.logTemp}}</strong>
+              </li>
+              <li class="ti-item" *ngIf = "userType.includes('Autopilot')">
+                <i class="{{serviceArr.metricTemp !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
+                <span>Metric Template</span>
+                <strong>{{serviceArr.metricTemp}}</strong>
               </li>
               <br>
               <br>
@@ -126,8 +136,7 @@
                       <span *ngIf="createApplicationForm.get('emailId').errors['email']">Please enter valid Email Id</span>
                     </span>
                   </div>
-                  <!-- /.form-group -->
-                  <div class="form-group">
+                  <div class="form-group" *ngIf = "userType === 'Autopilot Only' ? false : true">
                     <label>Image Source</label>
                     <select class="form-control" formControlName="imageSource" (change)="onImageSourceSelect($event.target.value)"
                     [ngClass]="createApplicationForm.get('imageSource').invalid && createApplicationForm.get('imageSource').touched?'is-invalid':''">
@@ -139,7 +148,6 @@
                       Image Source is required
                     </span>
                   </div>
-                  <!-- /.form-group -->
                   <div class="form-group">
                     <label>Application Description</label>
                     <textarea class="form-control" rows="3" formControlName="description" [readonly]="editMode"></textarea>
@@ -185,9 +193,30 @@
                               <span *ngIf="servicesForm.get('services')['controls'][i].get('serviceName').errors['startingFromNumber']">The service name must begin with a letter.</span>
                               <span *ngIf="servicesForm.get('services')['controls'][i].get('serviceName').errors['symbols']">No Special characters are allowed.</span>
                             </span>
-                            <!-- /.d-flex -->
                           </div>
-                          <div class="col-12 " formArrayName="pipelines">
+                          <div class="col-12" *ngIf = "userType.includes('Autopilot')">
+                            <div class="form-group mb-3 pl-5 text-muted">
+                              <label>Log Template</label>
+                              <div class="d-flex  mr-5 align-items-center">
+                                <select class="form-control" formControlName="logTemp">
+                                  <option value="" [disabled]="true">Select</option>
+                                  <option *ngFor="let pipelineData of pipelineExists" value="{{pipelineData.name}}">{{pipelineData.name}}</option>
+                                </select>
+                                <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Template" (click)="onAddTemplate()"><a data-toggle="modal" data-target="#newLogTemplate" data-backdrop="static" data-keyboard="false" class="btn-link"><i class="fas fa-plus"></i></a></span>
+                              </div>
+                            </div>
+                            <div class="form-group mb-3 pl-5 text-muted">
+                              <label>Metric Template</label>
+                              <div class="d-flex  mr-5 align-items-center">
+                                <select class="form-control" formControlName="metricTemp">
+                                  <option value="" [disabled]="true">Select</option>
+                                  <option *ngFor="let pipelineData of pipelineExists" value="{{pipelineData.name}}">{{pipelineData.name}}</option>
+                                </select>
+                                <span class="ml-2 addTemplate" data-toggle="tooltip" data-placement="top" data-original-title="Add New Metric Template" (click)="onAddTemplate()"><a data-toggle="modal" data-target="#newMatricTemplate" data-backdrop="static" data-keyboard="false" class="btn-link"><i class="fas fa-plus"></i></a></span>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-12 " formArrayName="pipelines" *ngIf = "userType.includes('OES')">
                             <div class="row"
                               *ngFor="let pipelineArr of serviceArr.get('pipelines')['controls'];let j=index">
                               <div class="col-12 " [formGroupName]="j">
@@ -279,11 +308,11 @@
   
                <!-- ###################### Environment Section Starts ###########################-->
   
-               <div class="col-10">
+              <div class="col-10" *ngIf = "userType === 'Autopilot Only' ? false : true">
                 <hr class="ml-0 mt-3 mb-3" />
               </div>
               <!-- /.col-8 -->
-              <div class="col-lg-8 col-12 col-xl-6">
+              <div class="col-lg-8 col-12 col-xl-6" *ngIf = "userType === 'Autopilot Only' ? false : true">
                 <div class="form-group group_permission">
                   <label>Environments</label>
                   <div class="col-12">
@@ -330,7 +359,7 @@
                 </div>
                 <!-- /.form-group -->
               </div>
-              <!-- /.col-6 -->
+             
   
               <!-- ###################### Environment Section Ends ###########################-->
   
@@ -427,3 +456,38 @@
     <app-loading-screen></app-loading-screen>
   </div>
 </div>
+
+<!-- Modal Log -->
+<div class="modal bd-example-modal-lg fade" id="newLogTemplate" tabindex="-1" role="dialog" aria-labelledby="newLogTemplateLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">New Log Template</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body p-0">
+        <app-log-template></app-log-template>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Matric -->
+<div class="modal bd-example-modal-lg fade" id="newMatricTemplate" tabindex="-1" role="dialog" aria-labelledby="newMatricTemplateLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">New Metric Template</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="modal-body p-0">
+        <app-metric-template></app-metric-template>
+      </div>
+    </div>
+  </div>
+</div>
+
