--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -244,18 +244,18 @@
                                   <span *ngIf="!pipelineArr.get('cloudAccount').valid && pipelineArr.get('cloudAccount').touched"
                                   class="help-block">Cloud Account is required</span>
                                 </div> -->
-                                <div class="form-group mb-3 pl-5 text-muted">
+                                <div class="form-group mb-3 pl-5 text-muted" formGroupName="dockerImageName">
                                   <label>Docker Account & Image Name</label>
                                   <div class="d-flex  mr-5 align-items-center">
                                       <div class="col-5 dockerImageSource">
-                                        <select class="form-control customAcc {{isReadonly(i)?'disabledinput':''}}" value="{{dockerAccountName}}" (change)="onChangeDockerAcc($event,i)" [disabled]="isReadonly(i)" 
+                                        <select class="form-control customAcc {{isReadonly(i)?'disabledinput':''}}" formControlName="accountName" value="{{dockerAccountName}}" (change)="onChangeDockerAcc($event,i)" [disabled]="isReadonly(i)" 
                                         [ngClass]="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched ? 'wheninvalid':''">
                                           <option value="" [disabled]="true">Select</option>
                                           <option *ngFor="let dockerimages of dockerImageData" value="{{dockerimages.imageSource}}">{{dockerimages.imageSource}}</option>
                                         </select>
                                       </div>
                                       <div class="col-7 dockerImageSource">
-                                        <select class="form-control customImg" formControlName="dockerImageName" 
+                                        <select class="form-control customImg" formControlName="imageName" 
                                         [ngClass]="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched ? 'is-invalid':''">
                                           <option value="" [disabled]="true">Select</option>
                                           <option *ngFor="let dockerimages of dockerImageDropdownData[i]" value="{{dockerimages}}">{{dockerimages}}</option>
