OP-3096: Initial changes related to json editor

--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -16,6 +16,9 @@
                       </div>
                       <!-- /.form-group -->
                     </div>
+                    <div class="col-12">
+                      <json-editor [options]="editorOptions" [data]="data" (change)="showJson($event)"></json-editor>
+                    </div>
                     <!-- /.col-6 -->
                   </div>
                   <!-- /.row -->
