--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~saturn-datepicker/bundle.css';
+// below inport for json editor
+@import '~jsoneditor/dist/jsoneditor.min.css';
+textarea.jsoneditor-text{min-height:500px;}
+.jsoneditor-frame , .jsoneditor-poweredBy{display: none !important;}
     
 @font-face {
 font-family: 'Avenir';
